--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-springy-parallax": "^1.3.0",
     "react-star-rating-component": "^1.4.1",
     "react-store-locator": "^0.19.0",
+    "reactstrap": "^8.0.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
