--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-read-more-less": "^0.1.6",
     "react-redux": "^7.0.2",
     "react-responsive-modal": "^3.6.0",
+    "react-responsive-picture": "^3.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-scroll-to-component": "^1.0.2",
