--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
     "animate.css": "^3.7.0",
+    "availity-reactstrap-validation": "^2.6.0",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
